--- a/.github/workflows/tilemaker.yml
+++ b/.github/workflows/tilemaker.yml
@@ -1,8 +1,8 @@
 name: Build tilemaker layers
 
 on: 
-  push:
-    branches: [build-layer]
+#push:
+    #branches: [build-layer]
     #  schedule:
     #    - cron: "12 12 * * 0"
   pull_request: 
@@ -16,8 +16,8 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
 
-      - name: Create DB
-        run: ./create-qrank-db
+      - name: Fetch binaries
+        run: ./bin/fetch-binaries
 
       - name: Publish DB
         env:
