--- a/.github/workflows/tilemaker.yml
+++ b/.github/workflows/tilemaker.yml
@@ -17,7 +17,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Install deps
-        run: sudo apt install build-essential libboost-dev libboost-filesystem-dev libboost-iostreams-dev libboost-program-options-dev libboost-system-dev liblua5.1-0-dev libshp-dev libsqlite3-dev rapidjson-dev zlib1g-dev
+        run: sudo apt install build-essential libboost-dev libboost-filesystem-dev libboost-iostreams-dev libboost-program-options-dev libboost-system-dev luajit libshp-dev libsqlite3-dev rapidjson-dev zlib1g-dev
 
       - name: Fetch binaries
         run: ./bin/fetch-binaries
