--- a/.github/workflows/tilemaker.yml
+++ b/.github/workflows/tilemaker.yml
@@ -16,6 +16,12 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
 
+      - uses: oven-sh/setup-bun@v1
+
+      - name: Install mapt
+        run: bun rm mapt && bun add https://github.com/cldellow/mapt
+
+
       - name: Install deps
         run: sudo apt install build-essential libboost-dev libboost-filesystem-dev libboost-iostreams-dev libboost-program-options-dev libboost-system-dev luajit libshp-dev libsqlite3-dev rapidjson-dev zlib1g-dev
 
