--- a/.github/workflows/tilemaker.yml
+++ b/.github/workflows/tilemaker.yml
@@ -12,6 +12,19 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        layer: [
+          boundaries,
+          buildings,
+          land,
+          parks,
+          peaks,
+          places,
+          pois,
+          water,
+          ways
+        ]
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
@@ -20,7 +33,6 @@ jobs:
 
       - name: Install mapt
         run: bun rm mapt && bun add https://github.com/cldellow/mapt
-
 
       - name: Install deps
         run: sudo apt install libboost-dev libboost-filesystem-dev libboost-iostreams-dev libboost-program-options-dev libboost-system-dev luajit libshp-dev libsqlite3-dev rapidjson-dev zlib1g-dev
@@ -34,4 +46,5 @@ jobs:
       - name: Build layer
         env:
           TILEMAKER: /tmp/tilemaker
-        run: ls -al && bun mapt build monaco.pbf land
+          LAYER: ${{ matrix.layer }}
+        run: ls -al && bun mapt build monaco.pbf $LAYER
