--- a/.github/workflows/tilemaker-layers.yml
+++ b/.github/workflows/tilemaker-layers.yml
@@ -1,12 +1,12 @@
 name: Build tilemaker layers
 
-on: 
+#on: 
 #push:
     #branches: [build-layer]
     #  schedule:
     #    - cron: "12 12 * * 0"
-  pull_request: 
-  workflow_dispatch:
+    #  pull_request: 
+    #  workflow_dispatch:
 
 jobs:
   build:
