--- a/.github/workflows/tilemaker-exports.yml
+++ b/.github/workflows/tilemaker-exports.yml
@@ -15,9 +15,9 @@ jobs:
     strategy:
       matrix:
         export: [
-          city-parks,
-          countries,
-          parks,
+          #          city-parks,
+          #          countries,
+          #          parks,
           states
         ]
     steps:
