--- a/.github/workflows/tilemaker-exports.yml
+++ b/.github/workflows/tilemaker-exports.yml
@@ -46,5 +46,5 @@ jobs:
           AWS_ENDPOINT_URL: https://ce5627cfc65c8b54d40bb91c0ba7298b.r2.cloudflarestorage.com
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
-          FILE: ${{ matrix.export }}
-        run: aws s3 cp $FILE s3://hikes-public/geojsonl/$FILE
+          FILE: ${{ matrix.export }}.geojsonl
+        run: zstd -9 $FILE && aws s3 cp "$FILE".zst s3://hikes-public/geojsonl/"$FILE".zst
