--- a/.github/workflows/tilemaker-exports.yml
+++ b/.github/workflows/tilemaker-exports.yml
@@ -5,8 +5,8 @@ on:
     #branches: [build-layer]
     #  schedule:
     #    - cron: "12 12 * * 0"
-      pull_request: 
-    #  workflow_dispatch:
+  #pull_request: 
+  workflow_dispatch:
 
 jobs:
   build:
@@ -48,4 +48,4 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           FILE: ${{ matrix.export }}.geojsonl
-        run: set -x; aws --version; zstd -9 $FILE && aws s3 cp "$FILE".zst s3://hikes-public/geojsonl/"$FILE".zst --endpoint-url $AWS_ENDPOINT_URL
+        run: set -x; aws --version; zstd -9 $FILE && aws s3 cp "$FILE".zst s3://hikes-public/geojsonl/"$FILE".zst
