--- a/.github/workflows/mirror-pbfs.yml
+++ b/.github/workflows/mirror-pbfs.yml
@@ -8,7 +8,7 @@ jobs:
   mirror:
     runs-on: ubuntu-latest
     env:
-      AREA: europe/monaco
+      AREA: north-america
     
     steps:
       - name: Fetch PBF
