--- a/.github/workflows/mirror-pbfs.yml
+++ b/.github/workflows/mirror-pbfs.yml
@@ -1,7 +1,6 @@
 name: Mirror PBFs from Geofabrik
 
 on:
-  pull_request:
   workflow_dispatch:
 
 jobs:
@@ -20,5 +19,5 @@ jobs:
           AWS_EC2_METADATA_DISABLED: true
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        run: aws s3 cp "$(basename $AREA)".pbf s3://hikes-public/pbfs/
+        run: aws s3 cp --no-progress "$(basename $AREA)".pbf s3://hikes-public/pbfs/
 
