--- a/.github/workflows/tilemaker-exports.yml
+++ b/.github/workflows/tilemaker-exports.yml
@@ -11,6 +11,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      AREA: monaco
 
     strategy:
       matrix:
@@ -33,13 +35,13 @@ jobs:
         run: ./bin/fetch-binaries
 
       - name: Fetch PBF
-        run: wget --progress=dot:giga https://public.hikeratlas.com/pbfs/north-america.pbf
+        run: wget --progress=dot:giga https://public.hikeratlas.com/pbfs/$AREA.pbf
 
       - name: Export
         env:
           TILEMAKER: /tmp/tilemaker
           EXPORT: ${{ matrix.export }}
-        run: ./export/export monaco.pbf $EXPORT
+        run: ./export/export $AREA.pbf $EXPORT
 
       - name: Upload GeoJSON
         env:
