--- a/.github/workflows/tilemaker-exports.yml
+++ b/.github/workflows/tilemaker-exports.yml
@@ -45,4 +45,4 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           FILE: ${{ matrix.export }}.geojsonl
-        run: set -x; aws --version; zstd -9 $FILE && aws s3 cp "$FILE".zst s3://hikes-public/geojsonl/"$FILE".zst
+        run: zstd -9 $FILE && aws s3 cp --no-progress "$FILE".zst s3://hikes-public/geojsonl/"$FILE".zst
