--- a/.github/workflows/tilemaker-layers.yml
+++ b/.github/workflows/tilemaker-layers.yml
@@ -2,17 +2,13 @@ name: Build tilemaker layers
 
 on:
   workflow_dispatch:
-
-#push:
-    #branches: [build-layer]
-    #  schedule:
-    #    - cron: "12 12 * * 0"
-    #  pull_request: 
-    #  workflow_dispatch:
+  pull_request: 
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      AREA: nova-scotia
 
     strategy:
       matrix:
@@ -43,10 +39,19 @@ jobs:
         run: ./bin/fetch-binaries
 
       - name: Fetch PBF
-        run: wget https://public.hikeratlas.com/pbfs/monaco.pbf
+        run: wget --progress=dot:giga https://public.hikeratlas.com/pbfs/"$AREA".pbf
 
       - name: Build layer
         env:
           TILEMAKER: /tmp/tilemaker
           LAYER: ${{ matrix.layer }}
-        run: ls -al && bun mapt build monaco.pbf $LAYER
+        run: ls -al && bun mapt build "$AREA".pbf $LAYER
+
+      - name: Upload PMTiles
+        env:
+          AWS_ENDPOINT_URL: https://ce5627cfc65c8b54d40bb91c0ba7298b.r2.cloudflarestorage.com
+          AWS_EC2_METADATA_DISABLED: true
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          FILE: ${{ matrix.layer }}.pmtiles
+        run: aws s3 cp --no-progress "$FILE" s3://hikes-public/layers/"$FILE"
