--- a/.github/workflows/tilemaker-layers.yml
+++ b/.github/workflows/tilemaker-layers.yml
@@ -2,6 +2,7 @@ name: Build tilemaker layers
 
 on:
   workflow_dispatch:
+  pull_request: 
 
 jobs:
   build:
@@ -49,8 +50,8 @@ jobs:
         run: wget --progress=dot:giga https://github.com/hikeratlas/qrank/releases/download/latest/qrank.db && aws s3 sync s3://hikes-public/geojsonl/ . --no-progress --endpoint-url=https://ce5627cfc65c8b54d40bb91c0ba7298b.r2.cloudflarestorage.com && unzstd *.zst
 
 
-      # TODO: only run this for boundaries, as it's a big download
       - name: Fetch coastline
+        if: ${{ ! startsWith(matrix.layer, 'boundaries') }}
         run: wget --progress=dot:giga https://osmdata.openstreetmap.de/download/water-polygons-split-4326.zip && unzip water-polygons-split-4326.zip && mv water-polygons-split-4326 slices/coastline
 
       - name: Build layer
