--- a/.github/workflows/tile-join.yml
+++ b/.github/workflows/tile-join.yml
@@ -2,6 +2,7 @@ name: Merge PMTiles into tiles.pmtiles
 
 on:
   workflow_dispatch:
+  pull_request: 
 
 jobs:
   build:
@@ -26,7 +27,7 @@ jobs:
         env:
           TILEMAKER: /tmp/tilemaker
           LAYER: ${{ matrix.layer }}
-        run: /tmp/tile-join -o tiles.pmtiles *.pmtiles
+        run: /tmp/tile-join --no-tile-size-limit -o tiles.pmtiles *.pmtiles
 
       - name: Upload PMTiles
         env:
