--- a/.github/workflows/tile-join.yml
+++ b/.github/workflows/tile-join.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Fetch binaries
-        run: ./bin/fetch-binaries
+        run: df -h && ./bin/fetch-binaries
 
       - name: Fetch PMTiles
         env:
