--- a/.github/workflows/tilemaker-layers.yml
+++ b/.github/workflows/tilemaker-layers.yml
@@ -2,12 +2,13 @@ name: Build tilemaker layers
 
 on:
   workflow_dispatch:
+  pull_request: 
 
 jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      AREA: north-america
+      AREA: nova-scotia
 
     strategy:
       matrix:
@@ -66,4 +67,4 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           FILE: ${{ matrix.layer }}.pmtiles
-        run: aws s3 cp --no-progress "$FILE" s3://hikes-public/layers/"$FILE"
+        run: aws s3 cp --no-progress "$FILE" s3://hikes-public/layers/"$AREA"/"$FILE"
