--- a/.github/workflows/tile-join.yml
+++ b/.github/workflows/tile-join.yml
@@ -2,26 +2,29 @@ name: Merge PMTiles into tiles.pmtiles
 
 on:
   workflow_dispatch:
+  pull_request: 
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      AREA: nova-scotia
 
     steps:
-      - name: Maximize build space
-        uses: AdityaGarg8/remove-unwanted-software@v2
-        with:
-          remove-android: 'true'
-          remove-dotnet: 'true'
-          remove-haskell: 'true'
-          remove-codeql: 'true'
-          remove-docker-images: 'true'
+      #      - name: Maximize build space
+      #        uses: AdityaGarg8/remove-unwanted-software@v2
+      #        with:
+      #          remove-android: 'true'
+      #          remove-dotnet: 'true'
+      #          remove-haskell: 'true'
+      #          remove-codeql: 'true'
+      #          remove-docker-images: 'true'
 
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
 
       - name: Fetch binaries
-        run: sudo mkdir /mnt/output && df -h && ./bin/fetch-binaries
+        run: ls -al /mnt && sudo mkdir /mnt/output && df -h && ./bin/fetch-binaries
 
       - name: Fetch PMTiles
         env:
@@ -29,7 +32,7 @@ jobs:
           AWS_EC2_METADATA_DISABLED: true
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        run: aws s3 sync s3://hikes-public/layers/ . --no-progress --endpoint-url=https://ce5627cfc65c8b54d40bb91c0ba7298b.r2.cloudflarestorage.com
+        run: aws s3 sync s3://hikes-public/layers/"$AREA"/ . --no-progress --endpoint-url=https://ce5627cfc65c8b54d40bb91c0ba7298b.r2.cloudflarestorage.com
 
       - name: tile-join
         env:
@@ -42,4 +45,4 @@ jobs:
           AWS_EC2_METADATA_DISABLED: true
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        run: sudo aws s3 cp --no-progress /mnt/output/tiles.pmtiles s3://hikes-public/tiles.pmtiles
+        run: sudo aws s3 cp --no-progress /mnt/output/tiles.pmtiles s3://hikes-public/"$AREA".pmtiles
