--- a/.github/workflows/tile-join.yml
+++ b/.github/workflows/tile-join.yml
@@ -24,7 +24,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Fetch binaries
-        run: ls -al /mnt && sudo mkdir /mnt/output && df -h && ./bin/fetch-binaries
+        run: sudo mkdir /mnt/output && sudo chown ubuntu:ubuntu /mnt/output && ./bin/fetch-binaries
 
       - name: Fetch PMTiles
         env:
@@ -37,7 +37,7 @@ jobs:
       - name: tile-join
         env:
           TILEMAKER: /tmp/tilemaker
-        run: sudo /tmp/tile-join --no-tile-size-limit -o /mnt/output/tiles.pmtiles *.pmtiles
+        run: /tmp/tile-join --no-tile-size-limit -o /mnt/output/tiles.pmtiles *.pmtiles
 
       - name: Upload PMTiles
         env:
@@ -45,4 +45,4 @@ jobs:
           AWS_EC2_METADATA_DISABLED: true
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        run: sudo aws s3 cp --no-progress /mnt/output/tiles.pmtiles s3://hikes-public/"$AREA".pmtiles
+        run: aws s3 cp --no-progress /mnt/output/tiles.pmtiles s3://hikes-public/"$AREA".pmtiles
