--- a/.github/workflows/tile-join.yml
+++ b/.github/workflows/tile-join.yml
@@ -24,7 +24,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Fetch binaries
-        run: sudo mkdir /mnt/output && sudo chown ubuntu:ubuntu /mnt/output && ./bin/fetch-binaries
+        run: whoami && ls -al && sudo mkdir /mnt/output && sudo chown ubuntu:ubuntu /mnt/output && ./bin/fetch-binaries
 
       - name: Fetch PMTiles
         env:
