--- a/.github/workflows/tilemaker-layers.yml
+++ b/.github/workflows/tilemaker-layers.yml
@@ -2,6 +2,7 @@ name: Build tilemaker layers
 
 on:
   workflow_dispatch:
+  pull_request: 
 
 jobs:
   build:
@@ -57,13 +58,13 @@ jobs:
         env:
           TILEMAKER: /tmp/tilemaker
           LAYER: ${{ matrix.layer }}
-        run: bun mapt build "$AREA".pbf $LAYER
+        run: bun mapt build "$AREA".pbf $LAYER --mbtiles
 
-      - name: Upload PMTiles
+      - name: Upload layer tiles
         env:
           AWS_ENDPOINT_URL: https://ce5627cfc65c8b54d40bb91c0ba7298b.r2.cloudflarestorage.com
           AWS_EC2_METADATA_DISABLED: true
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          FILE: ${{ matrix.layer }}.pmtiles
+          FILE: ${{ matrix.layer }}.mbtiles
         run: aws s3 cp --no-progress "$FILE" s3://hikes-public/layers/"$AREA"/"$FILE"
