--- a/.github/workflows/mbtiles-to-pmtiles.yml
+++ b/.github/workflows/mbtiles-to-pmtiles.yml
@@ -1,7 +1,8 @@
-name: Merge multiple layers
+name: Convert mbtiles to pmtiles
 
 on:
   workflow_dispatch:
+  pull_request: 
 
 jobs:
   build:
@@ -23,7 +24,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Fetch binaries
-        run: sudo mkdir /mnt/output && sudo chown runner:docker /mnt/output && ./bin/fetch-binaries
+        run: sudo mkdir /mnt/output && sudo chown runner:docker /mnt/output && wget --progress=dot:giga https://github.com/protomaps/go-pmtiles/releases/download/v1.13.0/go-pmtiles_1.13.0_Linux_x86_64.tar.gz && tar xvf go-pmtiles*
 
       - name: Fetch tiles
         env:
@@ -31,10 +32,10 @@ jobs:
           AWS_EC2_METADATA_DISABLED: true
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        run: aws s3 sync s3://hikes-public/layers/"$AREA"/ . --no-progress --endpoint-url=https://ce5627cfc65c8b54d40bb91c0ba7298b.r2.cloudflarestorage.com
+        run: aws s3 cp s3://hikes-public/"$AREA".mbtiles . --endpoint-url=https://ce5627cfc65c8b54d40bb91c0ba7298b.r2.cloudflarestorage.com
 
-      - name: tile-join
-        run: /tmp/tile-join --no-tile-size-limit -o /mnt/output/tiles.mbtiles *.mbtiles
+      - name: pmtiles convert
+        run: pmtiles convert "$AREA".mbtiles /mnt/output/"$AREA".pmtiles
 
       - name: Upload tiles
         env:
@@ -42,4 +43,4 @@ jobs:
           AWS_EC2_METADATA_DISABLED: true
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        run: aws s3 cp --no-progress /mnt/output/tiles.mbtiles s3://hikes-public/"$AREA".mbtiles
+        run: aws s3 cp --no-progress /mnt/output/"$AREA".pmtiles s3://hikes-public/"$AREA".pmtiles
