try --store and --fast
The boundaries layer seems to reliably fail. The logs aren't very
instructive, they just end during tile writing on tile 30M of 138M.

Wild guess that we're OOMing or running out of disk space.

--- a/.github/workflows/tilemaker-layers.yml
+++ b/.github/workflows/tilemaker-layers.yml
@@ -24,6 +24,16 @@ jobs:
           ways
         ]
     steps:
+      - name: Maximize build space
+        uses: AdityaGarg8/remove-unwanted-software@v2
+        with:
+          remove-android: 'true'
+          remove-dotnet: 'true'
+          remove-haskell: 'true'
+          remove-codeql: 'true'
+          remove-docker-images: 'true'
+
+
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
 
@@ -58,7 +68,7 @@ jobs:
         env:
           TILEMAKER: /tmp/tilemaker
           LAYER: ${{ matrix.layer }}
-        run: bun mapt build "$AREA".pbf $LAYER --mbtiles
+        run: bun mapt build "$AREA".pbf $LAYER --mbtiles -- --store /tmp/store --fast
 
       - name: Upload layer tiles
         env:
