use /mnt/store for --store

--- a/.github/workflows/tilemaker-layers.yml
+++ b/.github/workflows/tilemaker-layers.yml
@@ -46,7 +46,7 @@ jobs:
         run: sudo apt install libboost-dev libboost-filesystem-dev libboost-iostreams-dev libboost-program-options-dev libboost-system-dev libluajit-5.1-dev libshp-dev libsqlite3-dev rapidjson-dev zlib1g-dev luarocks lua-sql-sqlite3 && sudo luarocks install luaflock
 
       - name: Fetch binaries
-        run: ./bin/fetch-binaries
+        run: sudo mkdir /mnt/store && sudo chown runner:docker /mnt/store && ./bin/fetch-binaries
 
       - name: Fetch PBF
         run: wget --progress=dot:giga https://public.hikeratlas.com/pbfs/"$AREA".pbf
@@ -68,7 +68,7 @@ jobs:
         env:
           TILEMAKER: /tmp/tilemaker
           LAYER: ${{ matrix.layer }}
-        run: bun mapt build "$AREA".pbf $LAYER --mbtiles -- --store /tmp/store --fast
+        run: bun mapt build "$AREA".pbf $LAYER --mbtiles -- --store /mnt/store --fast
 
       - name: Upload layer tiles
         env:
