--- a/.github/workflows/tilemaker-layers.yml
+++ b/.github/workflows/tilemaker-layers.yml
@@ -2,12 +2,14 @@ name: Build tilemaker layers
 
 on:
   workflow_dispatch:
+  pull_request: 
 
 jobs:
   build:
     runs-on: ubuntu-latest
     env:
       AREA: north-america
+      BBOX: --bbox -170,20,-48,75
 
     strategy:
       matrix:
@@ -67,7 +69,7 @@ jobs:
         env:
           TILEMAKER: /tmp/tilemaker
           LAYER: ${{ matrix.layer }}
-        run: bun mapt build "$AREA".pbf $LAYER --mbtiles -- --store /mnt/store --fast
+        run: bun mapt build "$AREA".pbf $LAYER --mbtiles -- --store /mnt/store --fast $BBOX
 
       - name: Upload layer tiles
         env:
