--- a/.github/workflows/tilemaker-exports.yml
+++ b/.github/workflows/tilemaker-exports.yml
@@ -2,24 +2,36 @@ name: Build tilemaker exports
 
 on: 
   workflow_dispatch:
+  pull_request: 
 
 jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      AREA: north-america
+      AREA: nova-scotia
 
     strategy:
       matrix:
         export: [
-          city-parks,
-          countries,
-          parks,
-          states
+#         city-parks,
+#         countries,
+#         parks,
+#         states
+          zindex
+
         ]
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
+
+      - name: Fetch supporting GeoJSON and QRank files
+        if: ${{ startsWith(matrix.export, 'zindex') }}
+        env:
+          AWS_ENDPOINT_URL: https://ce5627cfc65c8b54d40bb91c0ba7298b.r2.cloudflarestorage.com
+          AWS_EC2_METADATA_DISABLED: true
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        run: wget --progress=dot:giga https://github.com/hikeratlas/qrank/releases/download/latest/qrank.db && aws s3 sync s3://hikes-public/geojsonl/ . --no-progress && unzstd *.zst
 
       - name: Install deps
         run: sudo apt install libboost-dev libboost-filesystem-dev libboost-iostreams-dev libboost-program-options-dev libboost-system-dev libluajit-5.1-dev libshp-dev libsqlite3-dev rapidjson-dev zlib1g-dev luarocks lua-sql-sqlite3 && sudo luarocks install luaflock
