--- a/.github/workflows/mbtiles-to-pmtiles.yml
+++ b/.github/workflows/mbtiles-to-pmtiles.yml
@@ -11,14 +11,14 @@ jobs:
       AREA: north-america
 
     steps:
-      #      - name: Maximize build space
-      #        uses: AdityaGarg8/remove-unwanted-software@v2
-      #        with:
-      #          remove-android: 'true'
-      #          remove-dotnet: 'true'
-      #          remove-haskell: 'true'
-      #          remove-codeql: 'true'
-      #          remove-docker-images: 'true'
+      - name: Maximize build space
+        uses: AdityaGarg8/remove-unwanted-software@v2
+        with:
+          remove-android: 'true'
+          remove-dotnet: 'true'
+          remove-haskell: 'true'
+          remove-codeql: 'true'
+          remove-docker-images: 'true'
 
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
