--- a/.github/workflows/mbtiles-to-pmtiles.yml
+++ b/.github/workflows/mbtiles-to-pmtiles.yml
@@ -24,7 +24,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Fetch binaries
-        run: sudo mkdir /mnt/output && sudo chown runner:docker /mnt/output && wget --progress=dot:giga https://github.com/protomaps/go-pmtiles/releases/download/v1.13.0/go-pmtiles_1.13.0_Linux_x86_64.tar.gz && tar xvf go-pmtiles*
+        run: sudo mkdir /mnt/input && sudo chown runner:docker /mnt/input && wget --progress=dot:giga https://github.com/protomaps/go-pmtiles/releases/download/v1.13.0/go-pmtiles_1.13.0_Linux_x86_64.tar.gz && tar xvf go-pmtiles*
 
       - name: Fetch tiles
         env:
@@ -32,10 +32,10 @@ jobs:
           AWS_EC2_METADATA_DISABLED: true
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        run: aws s3 cp s3://hikes-public/"$AREA".mbtiles . --no-progress
+        run: cd /mnt/input && aws s3 cp s3://hikes-public/"$AREA".mbtiles . --no-progress
 
       - name: pmtiles convert
-        run: ./pmtiles convert "$AREA".mbtiles /mnt/output/"$AREA".pmtiles
+        run: ./pmtiles convert /mnt/input/"$AREA".mbtiles "$AREA".pmtiles
 
       - name: Upload tiles
         env:
@@ -43,4 +43,4 @@ jobs:
           AWS_EC2_METADATA_DISABLED: true
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        run: aws s3 cp --no-progress /mnt/output/"$AREA".pmtiles s3://hikes-public/"$AREA".pmtiles
+        run: aws s3 cp --no-progress "$AREA".pmtiles s3://hikes-public/"$AREA".pmtiles
