--- a/.github/workflows/mbtiles-to-pmtiles.yml
+++ b/.github/workflows/mbtiles-to-pmtiles.yml
@@ -31,10 +31,10 @@ jobs:
           AWS_EC2_METADATA_DISABLED: true
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        run: cd /mnt/input && aws s3 cp s3://hikes-public/"$AREA".mbtiles . --no-progress
+        run: df -h && cd /mnt/input && aws s3 cp s3://hikes-public/"$AREA".mbtiles . --no-progress
 
       - name: pmtiles convert
-        run: ./pmtiles convert /mnt/input/"$AREA".mbtiles "$AREA".pmtiles
+        run: df -h && ./pmtiles convert /mnt/input/"$AREA".mbtiles "$AREA".pmtiles
 
       - name: Upload tiles
         env:
