store geojson in AREA-specific folder

--- a/.github/workflows/tilemaker-exports.yml
+++ b/.github/workflows/tilemaker-exports.yml
@@ -7,7 +7,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      AREA: north-america
+      AREA: nova-scotia
 
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
@@ -33,4 +33,4 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           FILE: parks.geojsonl
-        run: for x in *.geojsonl; do zstd -9 "$x"; aws s3 cp --no-progress "$x".zst s3://hikes-public/geojsonl/"$x".zst; done
+        run: for x in *.geojsonl; do zstd -9 "$x"; aws s3 cp --no-progress "$x".zst s3://hikes-public/geojsonl/"$AREA"/"$x".zst; done
