rejig how .mbtiles build works
Switch to Docker image

--- a/.github/workflows/tilemaker-layers.yml
+++ b/.github/workflows/tilemaker-layers.yml
@@ -7,8 +7,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      AREA: north-america
-      BBOX: --bbox -170,20,-48,75
+      #AREA: north-america
+      #BBOX: --bbox -170,20,-48,75
+
+      AREA: nova-scotia
 
     strategy:
       matrix:
@@ -41,12 +43,6 @@ jobs:
 
       - name: Install mapt
         run: bun rm mapt && bun add https://github.com/cldellow/mapt
-
-      - name: Install deps
-        run: sudo apt install libboost-dev libboost-filesystem-dev libboost-iostreams-dev libboost-program-options-dev libboost-system-dev libluajit-5.1-dev libshp-dev libsqlite3-dev rapidjson-dev zlib1g-dev luarocks lua-sql-sqlite3 && sudo luarocks install luaflock
-
-      - name: Fetch binaries
-        run: sudo mkdir /mnt/store && sudo chown runner:docker /mnt/store && ./bin/fetch-binaries
 
       - name: Fetch PBF
         run: wget --progress=dot:giga https://public.hikeratlas.com/pbfs/"$AREA".pbf
