--- a/.github/workflows/tilemaker-layers.yml
+++ b/.github/workflows/tilemaker-layers.yml
@@ -7,10 +7,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      #AREA: north-america
-      #BBOX: --bbox -170,20,-48,75
-
-      AREA: nova-scotia
+      AREA: north-america
+      BBOX: --bbox -170,20,-48,75
 
     strategy:
       matrix:
